Continuação da aula sobre links no HTML e CSS

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilo.css"> 
     <title>Tag A - Link</title>
 </head>
 <body> 
     <ul>    
     <li><a href="https://www.sp.senac.br/web/senac-santos" target="_blank" >Link para o Senac Santos</a></li>
     <li><a href="./pages/outraPagina.html" target="_blank" >Link para Outra Página.html</a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
+    <li><a href="https://www.google.com/intl/pt-BR/chrome/"> <img class="img-link" src="./image/chromelogo.svg" alt="Logotipo do navegador Google Chrome"></a></li>
+    <li><a href="mailto: acesbrama@gmail.com">Contato</a></li>
+    <li><a href="tel:+5513123567891011">Celular</a></li>
+    <li><a href="./file/bancoimagens.pdf">Acessar Bancos de Imagens Gratuitos</a></li>
+
 </ul>
     
 </body>
