--- a/pages/outraPagina.html
+++ b/pages/outraPagina.html
@@ -9,12 +9,22 @@
 </head>
 
 <body>
-    <a href="./../index.html">Voltar para Home</a>
+    
+    <ul id="nav">
+        <li><a href="./../index.html"> Voltar para a Home</a></li>
+        <li><a href="#sub1">Subtítulo 1</a></li>
+        <li><a href="#sub2">Subtítulo 2</a></li>
+        <li><a href="#sub3">Subtítulo 3</a></li>
+        <li><a href="#sub4">Subtítulo 4</a></li>
+        <li><a href="#sub5">Subtítulo 5</a></li>
+    </ul>
+    
     <h2>Bem vindo a Outra Página </h2>
 
     <!-- (h3^(p>Lorem)*6)*5 -->
 
-    <h3>Subtítulo 1</h3>
+    <h3 id="sub1">Subtítulo 1</h3>
+    <a href="#nav">Voltar ao topo</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et libero, nesciunt eius aspernatur earum quis ad nemo
         tenetur est expedita quam quos? Magnam rem exercitationem, reiciendis itaque delectus dolores ab?</p>
     <p>Mollitia deserunt tempora harum fuga architecto aut, ut omnis maiores officia quo expedita tenetur hic commodi
@@ -31,7 +41,8 @@
     <p>Alias labore sed suscipit tempora aspernatur? Mollitia ut facere id dignissimos. At nihil aliquam exercitationem
         recusandae, dolor beatae voluptate quod eligendi? Veniam pariatur quasi voluptas sequi ab repellat reiciendis
         minus.</p>
-    <h3>Subtítulo 2</h3>
+    <h3 id="sub2">Subtítulo 2</h3>
+    <a href="#nav">Voltar ao topo</a>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, aperiam! Recusandae illo repudiandae ut ex
         delectus fuga, natus ipsa sed dolor, magni magnam dolores omnis non deleniti doloremque necessitatibus pariatur!
     </p>
@@ -48,7 +59,8 @@
     <p>Eos molestiae repellendus tenetur asperiores magni iure odio? Recusandae, vitae. Necessitatibus aliquam quos et
         saepe natus optio commodi modi vitae perspiciatis explicabo, delectus reiciendis vero voluptatibus eos. Ullam,
         quo repellat?</p>
-    <h3></h3>
+    <h3 id="sub3">Subttítulo 3</h3>
+    <a href="#nav">Voltar ao topo</a>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus et ipsa iure est modi nulla veritatis illo fuga
         incidunt harum error tenetur dolore quis, illum fugiat, quas inventore, cum reiciendis.</p>
     <p>Nisi, explicabo similique. Repellat sapiente reiciendis iste vitae? Molestias voluptatem similique quisquam ipsum
@@ -65,7 +77,8 @@
     <p>Facilis eius repellat vel deleniti blanditiis facere aspernatur sint possimus ducimus aut consectetur quos esse,
         reprehenderit eum. Dolore, sint a vitae corrupti enim eaque aliquam possimus cupiditate sed provident
         reiciendis?</p>
-    <h3>Subtítulo 3</h3>
+    <h3 id="sub4">Subtítulo 4</h3>
+    <a href="#nav">Voltar ao topo</a>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, mollitia laborum aperiam iure, accusantium
         blanditiis explicabo magnam laboriosam saepe tempora rerum fugit. Ab laudantium explicabo iste adipisci. Autem,
         quos dolorum!</p>
@@ -82,7 +95,8 @@
     <p>Aliquid provident qui ab? Accusamus amet iusto minus expedita animi, ducimus distinctio doloribus odio eveniet
         provident aperiam dolor, quis aliquam est sit dolorem quidem perferendis quos dignissimos excepturi. Ex,
         recusandae!</p>
-    <h3>Subtítulo 4</h3>
+    <h3 id="sub5">Subtítulo 5</h3>
+    <a href="#nav">Voltar ao topo</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nobis accusamus rerum, ratione enim cum at quis?
         Veritatis autem voluptate, excepturi asperiores tempora laboriosam quasi? Iusto reiciendis accusantium totam
         vitae.</p>
